--- a/products.html
+++ b/products.html
@@ -4,12 +4,10 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>All Products - Redstore</title>
+<title>All Products</title>
 <link href="style.css" rel="stylesheet"/>
 <link href="https://fonts.gstatic.com" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&amp;display=swap" rel="stylesheet"/>
-<!--added a cdn link by searching font awesome4 cdn and getting this link from https://www.bootstrapcdn.com/fontawesome/ this url*/-->
-<!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">-->
 </head>
 <body>
     <!-- Skip link for keyboard navigation -->
@@ -178,8 +176,8 @@
                     </div>
                 </div>
                 <div class="footer-col-2">
-                    <img src="images/logo-white.png" alt="Redstore Logo"/>
-                    <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.</p>
+                    <img src="images/logo.png" />
+                    <p>Our Purpose is to make shopping easy, fast, and reliable for everyone, everywhere</p>
                 </div>
                 <div class="footer-col-3">
                     <h3>Useful Links</h3>
@@ -201,7 +199,7 @@
                 </div>
             </div>
             <hr/> <!-- horizontal line -->
-            <p class="copyright">Copyright 2021 - Redstore</p>
+            <p class="copyright">Copyright 2025</p>
         </div>
     </footer>
     <script src="app.js"></script>
