--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
-        <title>All Products - Redstore</title>
+        <title>Cart</title>
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -130,7 +130,7 @@
                 </div>
                 <div class="footer-col-2">
                     <img src="images/logo-white.png">
-                    <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.</p>
+                    <p>Our Purpose is to make shopping easy, fast, and reliable for everyone, everywhere</p>
                 </div>
                 <div class="footer-col-3">
                     <h3>Useful Links</h3>
@@ -154,7 +154,7 @@
             </div>
             
             <hr><!--horizontal line-->
-            <p class="copyright">Copyright 2021</p>
+            <p class="copyright">Copyright 2025</p>
             
         </div>
     </div>
