--- a/products-details.html
+++ b/products-details.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Details - Redstore</title>
+    <title>Product Details</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-    <!--added a cdn link for font awesome icons-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -101,8 +99,8 @@
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="images/logo-white.png">
-                <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.</p>
+                <img src="images/logo.png">
+                <p>Our Purpose is to make shopping easy, fast, and reliable for everyone, everywhere</p>
             </div>
             <div class="footer-col-3">
                 <h3>Useful Links</h3>
@@ -124,7 +122,7 @@
             </div>
         </div>
         <hr>
-        <p class="copyright">Copyright 2021</p>
+        <p class="copyright">Copyright 2025</p>
     </div>
 </div>
 
